# proxmox-ve-rs

./: .gitignore  Cargo.toml  Makefile
proxmox-frr/: Cargo.toml
proxmox-frr-templates/: Makefile
proxmox-frr-templates/debian/: changelog  control  proxmox-frr-templates.install
proxmox-frr-templates/templates/: access_lists.jinja  bgp_router.jinja  bgpd.jinja  fabricd.jinja  frr.conf.jinja  interface.jinja  ip_routes.jinja  isisd.jinja  ospfd.jinja  prefix_lists.jinja  protocol_routemaps.jinja  route_maps.jinja
proxmox-frr/debian/: changelog  control
proxmox-frr/src/ser/: bgp.rs  isis.rs  mod.rs  openfabric.rs  ospf.rs  route_map.rs  serializer.rs
proxmox-sdn-types/: Cargo.toml
proxmox-sdn-types/debian/: changelog  control
proxmox-sdn-types/src/: net.rs
proxmox-ve-config/: Cargo.toml
proxmox-ve-config/debian/: changelog  control
proxmox-ve-config/src/common/: valid.rs
proxmox-ve-config/src/firewall/: cluster.rs
proxmox-ve-config/src/firewall/types/: ipset.rs
proxmox-ve-config/src/sdn/: mod.rs
proxmox-ve-config/src/sdn/fabric/: frr.rs
proxmox-ve-config/tests/fabric/: main.rs
proxmox-ve-config/tests/fabric/snapshots/: fabric__openfabric_default_pve.snap  fabric__openfabric_default_pve1.snap  fabric__openfabric_dualstack_pve.snap  fabric__openfabric_ipv6_only_pve.snap  fabric__openfabric_multi_fabric_pve1.snap  fabric__ospf_default_pve.snap  fabric__ospf_default_pve1.snap  fabric__ospf_multi_fabric_pve1.snap
