[workspace]
members = [
    "proxmox-ve-config",
    "proxmox-frr",
    "proxmox-sdn-types",
]
exclude = [
    "build",
]
resolver = "2"

[workspace.package]
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
license = "AGPL-3"
homepage = "https://proxmox.com"
exclude = [ "debian" ]
rust-version = "1.82"

[workspace.dependencies]
anyhow = "1"
const_format = "0.2"
regex = "1.7"
serde = { version = "1" }
thiserror = "2.0.0"

proxmox-frr = { version = "0.3", path = "proxmox-frr" }
proxmox-network-types = { git = "https://github.com/AOSC-Tracking/proxmox", package = "proxmox-network-types", rev = "0d7535f9ba84f2995a6fe5fd82870c9c149234cc" }
proxmox-schema = { git = "https://github.com/AOSC-Tracking/proxmox", package = "proxmox-schema", rev = "0d7535f9ba84f2995a6fe5fd82870c9c149234cc" }
proxmox-sdn-types = { version = "0.2", path = "proxmox-sdn-types" }
proxmox-serde = {  git = "https://github.com/AOSC-Tracking/proxmox", package = "proxmox-serde", rev = "0d7535f9ba84f2995a6fe5fd82870c9c149234cc"  }
