[package]
name = "proxmox-frr"
description = "Rust types for the FRR configuration file"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
exclude.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }
anyhow = "1"
tracing = "0.1"
serde = { workspace = true, features = [ "derive" ] }
serde_repr = "0.1"
minijinja = { version = "2.5", features = [ "multi_template", "loader" ] }

proxmox-network-types = { workspace = true }
proxmox-sdn-types = { workspace = true }
proxmox-serde = { workspace = true }
proxmox-sortable-macro = {  git = "https://github.com/AOSC-Tracking/proxmox", package = "proxmox-sortable-macro",  rev = "0d7535f9ba84f2995a6fe5fd82870c9c149234cc" }

