[package]
name = "proxmox-ve-config"
version = "0.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
log = "0.4"
anyhow = { workspace = true }
nix = "0.29"
regex = { workspace = true }
const_format = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1.37"

serde = { workspace = true, features = [ "derive" ] }
serde_json = "1"

proxmox-frr = { workspace = true, optional = true }
proxmox-network-types = { workspace = true, features = [ "api-types" ] }
proxmox-schema = { workspace = true, features = [ "api-types" ] }
proxmox-sdn-types = { workspace = true }
proxmox-section-config = { git = "https://github.com/AOSC-Tracking/proxmox", package = "proxmox-section-config",  rev = "0d7535f9ba84f2995a6fe5fd82870c9c149234cc" }
proxmox-serde = { workspace = true, features = [ "perl" ]}
proxmox-sys = {  git = "https://github.com/AOSC-Tracking/proxmox", package = "proxmox-sys",  rev = "0d7535f9ba84f2995a6fe5fd82870c9c149234cc" }
proxmox-sortable-macro = {  git = "https://github.com/AOSC-Tracking/proxmox", package = "proxmox-sortable-macro",  rev = "0d7535f9ba84f2995a6fe5fd82870c9c149234cc" }

[features]
frr = ["dep:proxmox-frr"]

[dev-dependencies]
insta = "1.21"
